Tue Apr 22 19:56:13 BST 2003  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING: New prototypical document for developers.

Tue Apr 22 19:48:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (parse_layout, look_for_file): Add a BSD layout in
	  which cat pages have the extension .0 (Jeremy C. Reed). More work
	  is needed elsewhere so that man can write such cat pages, though.
	* configure.in (--enable-mandirs): Add BSD layout.
	* manual/intro.me (Arguments to configure): Document
	  --enable-mandirs=BSD.
	* README: Sync with manual/intro.me.

Tue Apr 22 19:38:03 BST 2003  Colin Watson  <cjwatson@debian.org>

	* libdb/COPYING.LIB: Remove (obsoleted in favour of
	  docs/COPYING.LIB).
	* GNUmakefile.in (_docs, _libdb): Include COPYING.LIB from docs/
	  rather than libdb/.

Tue Apr 22 19:34:30 BST 2003  Colin Watson  <cjwatson@debian.org>

	* tools/mandb_[nt]fmt-script: Correct "# !" to "#! " on the shebang
	  line.

Tue Apr 15 18:16:30 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in (LFLAGS): Provide -8 and -B as separate arguments.
	  flex 2.5.31 is stricter about this.
	* zsoelim/Makefile.in (LFLAGS): Likewise.

Sun Apr 13 14:36:29 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Add Hungarian -> ISO-8859-2.

Sun Apr 13 13:39:38 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Return 0 if the source file doesn't exist, so
	  that the caller can go on and silently create a non-existent
	  database rather than bailing out.

Sun Apr 13 12:49:33 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c: Remove DO_CHOWN define and simply use SECURE_MAN_UID.

Thu Apr 10 23:51:43 BST 2003  Byrial Ole Jensen  <byrial@image.dk>

	* po/da.po: Update from Translation Project.

Mon Apr  7 09:12:27 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man): Call local_man_loop() straight away if name
	  contains a slash. Make the number of pages found an output